Fix textarea clipping bug

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -186,6 +186,9 @@ widget-config > div.large {
 widget-config > div > * {
   font-size: larger;
 }
+widget-config textarea {
+  resize: vertical;
+}
 
 #background-conf {
   font-size: x-large;
